--- a/blocks/accordion-header/package.json
+++ b/blocks/accordion-header/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "shb-accordion-title",
-	"version": "0.1.1",
-	"description": "Provides the title block for the accordion block. This block is only allowed inside the accordion block and cannot be used outside of it.",
+	"name": "shb-accordion-header",
+	"version": "0.1.0",
+	"description": "Provides the header block for the accordion block. This block is only allowed inside the accordion block and cannot be used outside of it.",
 	"author": "Say Hello GmbH",
 	"license": "GPL-2.0-or-later",
 	"main": "build/index.js",
